# src/app/api/models/location.ts
@@ -1,0 +1,12 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface Location {
+  city?: null | string;
+  country?: null | string;
+  description?: null | string;
+  id?: number;
+  latitude?: null | number;
+  longitude?: null | number;
+  name?: null | string;
+  networkZone?: null | string;
+}
