# src/app/api/models/o-clave-valor-s.ts
@@ -1,0 +1,6 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface OClaveValorS {
+  clave?: null | string;
+  valor?: null | string;
+}
