# src/app/api/models/price-hourly.ts
@@ -1,0 +1,6 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface PriceHourly {
+  gross?: null | string;
+  net?: null | string;
+}
