# src/app/api/models/price-monthly.ts
@@ -1,0 +1,6 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface PriceMonthly {
+  gross?: null | string;
+  net?: null | string;
+}
