# src/app/api/models/price.ts
@@ -1,0 +1,9 @@
+/* tslint:disable */
+/* eslint-disable */
+import { PriceHourly } from './price-hourly';
+import { PriceMonthly } from './price-monthly';
+export interface Price {
+  location?: null | string;
+  price_hourly?: PriceHourly;
+  price_monthly?: PriceMonthly;
+}
