# src/app/api/services.ts
@@ -1,3 +1,5 @@
 export { AppService } from './services/app.service';
 export { AuthService } from './services/auth.service';
+export { HetznerService } from './services/hetzner.service';
+export { PlataformaService } from './services/plataforma.service';
 export { UsuarioService } from './services/usuario.service';
